inicio de sesión basico, falta lo del hospital

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully connected to Supabase database.\n",
-      "Successfully imported connect_to_supabase from functions.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the function from functions.py\n",
     "try:\n",
@@ -35,21 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "955988ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -58,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully connected to Supabase database.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Call the connect_to_supabase function\n",
     "\n",
@@ -77,18 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b23d9329",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully imported execute_query from functions.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the function from functions.py\n",
     "try:\n",
@@ -111,8 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4391fa5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "41830197",
    "metadata": {},
    "outputs": [
     {
@@ -120,53 +94,67 @@
      "output_type": "stream",
      "text": [
       "Successfully connected to Supabase database.\n",
-      "Error executing query: relation \"empleado\" does not exist\n",
-      "LINE 1: SELECT * FROM empleado\n",
-      "                      ^\n",
-      "\n"
+      "Successfully imported connect_to_supabase from functions.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the function from functions.py\n",
+    "try:\n",
+    "    from functions import registrar_usuario\n",
+    "    print('Successfully imported connect_to_supabase from functions.py')\n",
+    "except ImportError as e:\n",
+    "    print(f'Error importing function: {e}')\n",
+    "    print('Make sure functions.py is in the same directory or in the Python path.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bfe4e35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Datos de prueba\n",
+    "dni = \"12345678\"\n",
+    "apellido = \"García\"\n",
+    "nombre = \"María\"\n",
+    "fecha_nac = \"1990-05-15\"\n",
+    "sexo = \"F\"\n",
+    "direccion = \"Av. Corrientes 1234\"\n",
+    "codigo_postal = \"1043\"\n",
+    "obra_social = \"OSDE\"\n",
+    "correo = \"maria.garcia@email.com\"\n",
+    "contraseña = \"miPassword123\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a6563f99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully connected to Supabase database.\n",
+      "Usuario María García registrado exitosamente.\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "execute_query(query)"
+    "registrar_usuario(dni, apellido, nombre, fecha_nac, sexo, direccion, codigo_postal, obra_social, correo, contraseña)"
    ]
   }
  ],
